fix flag icons not aligned with flagging state

--- a/gnosis/catalog/static/css/flagging.css
+++ b/gnosis/catalog/static/css/flagging.css
@@ -23,11 +23,11 @@
     user-select: none;
 }
 
-.with_cursor {
+.not_flagged{
     cursor: pointer;
 }
 
-.no_cursor {
+.flagged {
     cursor: auto !important;
 }
 
